--- a/.gitignore
+++ b/.gitignore
@@ -1,67 +1,25 @@
-# ignore all files starting with .
-.*
-
-# track this file .gitignore (i.e. do NOT ignore it)
-!.gitignore
-!.github
-!.vscode
-php_errorlog
-.log
-
-# track this file .gitignore (i.e. do NOT ignore it)
-!composer.json
-!webpack.config.js
-!package.json
-!webpack.production.js
-!webpack.development.js
-
-# track readme.md in the root (i.e. do NOT ignore it)
-!README.md
-
-# ignore OS generated files
-ehthumbs.db
-Thumbs.db
-
-# ignore Editor files
-*.sublime-project
-*.sublime-workspace
-*.komodoproject
-
-# ignore log files and databases
+# Logs
+logs
 *.log
-*.sql
-*.sqlite
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# ignore compiled files
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
+node_modules
+dist
+dist-ssr
+*.local
+.env
 
-# ignore packaged files
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# ignore node/grunt dependency directories
-node_modules/
-
-public/
-
-# ignore the dist directory were our bundle files are going to be
-!.gitkeep
-!.devcontainer
-!.devcontainer/*
-!.gitpod.yml
-!.htaccess
-!.eslintrc
-!.env.example
-.now
-.vercel
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
