--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
         "vite": "^4.4.8"
-    }
+    },
+    "engines": {
+    "node": ">=20.0.0"
+  }
 }
