--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
         "bootstrap-icons": "^1.13.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.10.10",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.18.0"
     },
