--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "bootstrap": "^5.3.7",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.10.10",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.18.0"
+        "react-router-bootstrap": "^0.26.3",
+        "react-router-dom": "^6.30.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.18",
@@ -27,6 +30,6 @@
         "vite": "^4.4.8"
     },
     "engines": {
-    "node": ">=20.0.0"
-  }
+        "node": ">=20.0.0"
+    }
 }
